aks/erpweb/test/erpweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erpweb-deployment
  labels:
    app: erpweb
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      service: erpweb
  template:
    metadata:
      labels:
        app: erpweb
        service: erpweb
    spec:
      containers:
        - name: erpweb
          image: otokocerptestacr.azurecr.io/erpweb:$(Build.BuildId)
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "1000Mi"
              cpu: "0.3"
            limits:
              memory: "1000Mi"
              cpu: "0.3"
