aks/erpweb/test/erpweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erpweb-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  tls: 
  - hosts:
      - erpweb-test.otokoc.com.tr
    secretName: tls-otokoc
  ingressClassName: nginx
  rules:
  - host: erpweb-test.otokoc.com.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: erpweb-svc
            port:
              number: 80
